crates/swc_ecma_parser/tests/test262-error-references/fail/98204d734f8c72b3.js.stderr
error: Class property requires `jsc.parser.classProperty` to be true
 --> $DIR/tests/test262-parser/fail/98204d734f8c72b3.js:1:9
  |
1 | (class {a})
  |         ^

